--- a/lory/pyproject.toml
+++ b/lory/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "django>=5.2.7",
     "djangorestframework>=3.16.1",
+    "psycopg[binary]>=3.2.10",
 ]
 
 [dependency-groups]
